--- a/News.txt
+++ b/News.txt
@@ -1,3 +1,157 @@
+Changes for the 5th ORE release (1.8.5.0):
+============================================
+
+ORE 1.8.5.0 includes the following notable changes, details can be
+found in the commits between 28 May 2019 and 12 June 2020.
+
+INSTRUMENTS
+
+- Add Inflation CPI and YoY Caps/Floors and capped/floored cash flows
+- Add Forward Bond
+- Add American Commodity Option
+- Add reference data manager (handles Bond reference data as concrete example)
+- Add underlying description (FX, Equity, Commodity)
+- Add Settlement node to FX Forward, FX Swap and Swap instruments 
+- Extend Equity Swap: legs, equity coupon with FX adjustment, resettable feature,
+  quantity vs initial notional
+- Extend CDS: Allow fixed recovery, front or back stub periods, protection payment
+  timing at default/period end/maturity
+- Allow floating coupons with sub periods, i.e. several fixings per coupon period
+  that are averaged or compounded
+- Allow Caps/Floors on BMA/SIFMA and overnight indices
+- Allow adding new leg types via a LegDataFactory
+
+MARKETS
+
+- Currencies: 73 mapped
+- Calendars: 88 mapped by country, city, ISO 10383 MIC, ISO 4217 currency code,
+  ISO 3166-1 Alpha 2 and 3 country codes
+- Allow large joint calendars
+- OIS indices: 19 mapped including USD-Prime, EUR-ESTER and USD-SOFR
+- IBOR indices: 43 mapped using "hard coded" index names
+- Inflation indices: 9 mapped
+- Add IBOR and CMS indices that can be defined in conventions, so that they can be
+  added to ORE without code changes
+
+TERM STRUCTURES
+
+- Add fitted Bond yield curves
+- When bootstrapping a default curve from CDS, allow for retries with widening of
+  search bounds. Avoids exceptions
+  for distressed CDS curves for example.
+- Inflation cap/floor volatility surfaces cleaned up, inflation price surfaces removed
+  from the market interface
+- Equity volatility surface changes, clean up and stripping from option premiums,
+  allow wildcard in strike/expiry config.
+- Allow optional quotes in curve configurations
+- New Equity forward curve stripper that allows a dividend yield to be determined from
+  equity option premiums
+- ESTER/SOFR basic curve building
+- New cap/floor optionlet stripper that uses an iterative bootstrap with configurable
+  interpolation/extrapolation
+  in expiry and strike direction.
+- New CDS volatility configuration to allow for constant volatility, a volatility
+  curve or an expiry x strike surface
+- Added Commodity basis price curve and average basis price curve
+
+ANALYTICS
+
+- Fix volatility conversion for lognormal swaption cubes in ScenarioSimMarket
+- Cross Asset Model refactoring to allow alternative risk factor evolution models 
+- Bermudan Swaption LGM calibration changes (allow to continue processing when
+  tolerance is breached, allow to thin out calibration grids)
+- Improve performance of analytic LGM swaption engine by introducing a cache
+  (speeds up LGM calibration)
+- Add Indexed coupon class
+- Add CDS to stress testing capability
+
+UNIT TESTS
+
+- QuantExt unit test cases: 180 test functions, 3749 data-driven cases
+- OREData unit tests: 135 test functions, 368 data-driven cases 
+- OREAnalytics unit tests: 61 test functions and cases
+i.e. 609 test functions vs 429 in the previous release.
+
+For example:
+"./quantext-test-suite" reports 3749 cases
+"./quantext-test-suite --list_cases | grep test" lists 180 test functions
+
+EXAMPLES
+
+- Maintenance of inputs, ensure consistency of results with user guide
+- Additional Prime Curve example
+
+USER GUIDE
+
+- Documentation of ongoing changes, new instruments, broader market coverage,
+  extended to over 250 pages
+
+BUILDING ORE
+
+- Discontinue automake builds
+
+LANGUAGE BINDUNGS
+
+- Maintenance to ensure SWIG wrappers build with current ORE and QuantLib-SWIG 1.18,
+  rework all *.i files to use the SWIG wrapper of {\tt boost::shared\_ptr} following
+  QuantLib-SWIG
+
+OTHER
+
+- Fixing manager refactoring and bug fixes
+- Clean up of log levels to reduce the volume of log messages
+- Improved log messages when LGM calibration errors exceed tolerances
+- LGM model builder bug fixes
+- Builds with QuantLib Version 1.18
+- Builds with Boost versions up to 1.72.0
+
+
+Changes for the 4th ORE release (1.8.4.1):
+============================================
+
+ORE 1.8.4.1 includes the following notable changes, details can be
+found in the commits between 11 December 2017 and 28 May 2019.
+
+INSTRUMENTS
+- Commodity Forward and Option, see example 5.24
+- Equity Swap, see extended example 5.16
+- CMS Spread Option (Cap/Floor, Digital Cap/Floor), see example 5.25
+
+MARKETS
+- New calendars: Chile, Colombia, Malaysia, Peru, Philippines, Thailand
+- New IBOR indexes: CHF SARON, CLP CAMARA, COP IBR, DEM LIBOR, DKK OIS,
+  NOWA, PHP PHIREF, RUB MOSPRIME, SEK SIOR, THB BIBOR
+- New inflation idexes and regions: DKCPI, SECPI
+- Equity index added
+
+TERM STRUCTURES
+- Cap/Floor smile volatility surface added
+- Cross currency basis swap helper (with MtM Reset) added
+- Cross currency fixed vs. float swap helper added, see example 5.29
+- Discount ratio curves added, see example 5.28
+- Correlation term structure added (to support CMS spread products)
+
+ANALYTICS
+- KVA added (thanks to Roland Kapl)
+
+UNIT TESTS
+- Unit tests suites extended to 429 cases in total
+- Data driven tests added in ORE Data
+- Now using boost’s automated test suite creation and registration
+
+EXAMPLES
+- ORE has 29 examples now vs 23 in the previous release
+
+USER GUIDE
+- Extended to 194 pages
+
+BUILDING ORE
+- CMake build system added, see end of section 4.2
+
+LANGUAGE BINDINGS
+- ORE SWIG projected added, to support ORE in Python,
+  see https://github.com/OpenSourceRisk/ORE-SWIG
+  
 
 Changes for the third ORE release (1.8.3.0):
 ============================================
