--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -4431,8 +4431,8 @@ Listing \ref{lst:eqcurve_configuration} shows the configuration of equity forwar
     <ForecastingCurve>EUR1D</ForecastingCurve>
     <!-- DividendYield, ForwardPrice, OptionPremium -->
     <Type>DividendYield</Type> 
-    <!-- Optional node, only used when Type is OptionPremium
-    <ExerciseStyle>American</ExerciseStyle> -->
+    <!-- Optional node, only used when Type is OptionPremium -->
+    <ExerciseStyle>American</ExerciseStyle>
     <!-- Spot quote from the market data file -->
     <SpotQuote>EQUITY/PRICE/SP5/USD</SpotQuote> 
     <Quotes>
